--- a/DataPreprocessing/download_dataset.ipynb
+++ b/DataPreprocessing/download_dataset.ipynb
@@ -73,8 +73,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Lấy dataset T-STUDENT-FITDNU"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +97,29 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading Dataset Version Zip in Student-Behavior-Recognition-9 to yolov12::  56%|█████▌    | 520520/931140 [00:24<00:17, 23369.08it/s]"
+      "Downloading Dataset Version Zip in Student-Behavior-Recognition-9 to yolov12:: 100%|██████████| 931140/931140 [00:42<00:00, 22047.17it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Extracting Dataset Version Zip to Student-Behavior-Recognition-9 in yolov12:: 100%|██████████| 7274/7274 [00:01<00:00, 4129.08it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dữ liệu đã tải về: /hdd2/minhnv/CodingYOLOv12/Dataset/Student-Behavior-Recognition-9\n"
      ]
     }
    ],
@@ -126,6 +155,23 @@
     "# import subprocess\n",
     "# print(\"\\nCấu trúc thư mục:\")\n",
     "# subprocess.run(f\"tree {drive_dataset_path}\", shell=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "from roboflow import Roboflow\n",
+    "\n",
+    "%cd \"/hdd2/minhnv/CodingYOLOv12/Dataset\"\n",
+    "\n",
+    "rf = Roboflow(api_key=\"WoI82BOZwFadZbl1PhL1\")\n",
+    "project = rf.workspace(\"phat-hien-hanh-vi-sinh-vien-trong-lop-hoc\").project(\"t-student_fit-dnu-lmipd\")\n",
+    "version = project.version(1)\n",
+    "dataset = version.download(\"yolov12\")"
    ]
   }
  ],
